[gd_scene load_steps=64 format=3 uid="uid://cvnafhg5v34po"]

[ext_resource type="Texture2D" uid="uid://b1bssce881pl2" path="res://Assets/Enemy Assets/NightBorne/NightBorne.png" id="1_gtmpm"]
[ext_resource type="Script" uid="uid://csjbtosrju3iy" path="res://Scripts/Basic Enemy.gd" id="1_ldolw"]
[ext_resource type="PackedScene" uid="uid://csiimkywevom7" path="res://Scenes/Hurtbox.tscn" id="3_0mme3"]
[ext_resource type="Script" uid="uid://ccjfqwc5vm62o" path="res://Scripts/Health.gd" id="4_bn3wk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xvijc"]
atlas = ExtResource("1_gtmpm")
region = Rect2(720, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sqap"]
atlas = ExtResource("1_gtmpm")
region = Rect2(800, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk4b0"]
atlas = ExtResource("1_gtmpm")
region = Rect2(880, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xno3g"]
atlas = ExtResource("1_gtmpm")
region = Rect2(0, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o1m3"]
atlas = ExtResource("1_gtmpm")
region = Rect2(80, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xlkn"]
atlas = ExtResource("1_gtmpm")
region = Rect2(160, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sd0c"]
atlas = ExtResource("1_gtmpm")
region = Rect2(240, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwgu"]
atlas = ExtResource("1_gtmpm")
region = Rect2(320, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iiah"]
atlas = ExtResource("1_gtmpm")
region = Rect2(400, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3c1y"]
atlas = ExtResource("1_gtmpm")
region = Rect2(480, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tha5b"]
atlas = ExtResource("1_gtmpm")
region = Rect2(560, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo4o7"]
atlas = ExtResource("1_gtmpm")
region = Rect2(640, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yd1q3"]
atlas = ExtResource("1_gtmpm")
region = Rect2(720, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyecj"]
atlas = ExtResource("1_gtmpm")
region = Rect2(800, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5o35"]
atlas = ExtResource("1_gtmpm")
region = Rect2(880, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyyhv"]
atlas = ExtResource("1_gtmpm")
region = Rect2(960, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vpjn"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1040, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_24w2b"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1120, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmyy7"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1200, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1cg"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1280, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q0tn"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1360, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_emwtc"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1440, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_133vp"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1520, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3601"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1600, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2si3o"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1680, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c0b7"]
atlas = ExtResource("1_gtmpm")
region = Rect2(1760, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldolw"]
atlas = ExtResource("1_gtmpm")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q34a"]
atlas = ExtResource("1_gtmpm")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pxrr"]
atlas = ExtResource("1_gtmpm")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll3iy"]
atlas = ExtResource("1_gtmpm")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q62ga"]
atlas = ExtResource("1_gtmpm")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f64y"]
atlas = ExtResource("1_gtmpm")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcygy"]
atlas = ExtResource("1_gtmpm")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w3dw"]
atlas = ExtResource("1_gtmpm")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_43fpg"]
atlas = ExtResource("1_gtmpm")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qmt2"]
atlas = ExtResource("1_gtmpm")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdcht"]
atlas = ExtResource("1_gtmpm")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eifw"]
atlas = ExtResource("1_gtmpm")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_77h6d"]
atlas = ExtResource("1_gtmpm")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdtoi"]
atlas = ExtResource("1_gtmpm")
region = Rect2(640, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ni2f"]
atlas = ExtResource("1_gtmpm")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsp08"]
atlas = ExtResource("1_gtmpm")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5r2t"]
atlas = ExtResource("1_gtmpm")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj5pm"]
atlas = ExtResource("1_gtmpm")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr4j2"]
atlas = ExtResource("1_gtmpm")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dv02"]
atlas = ExtResource("1_gtmpm")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaw13"]
atlas = ExtResource("1_gtmpm")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gckoq"]
atlas = ExtResource("1_gtmpm")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrwm8"]
atlas = ExtResource("1_gtmpm")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rknva"]
atlas = ExtResource("1_gtmpm")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvh2f"]
atlas = ExtResource("1_gtmpm")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_imw05"]
atlas = ExtResource("1_gtmpm")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyxp6"]
atlas = ExtResource("1_gtmpm")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tmlv"]
atlas = ExtResource("1_gtmpm")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s25e4"]
atlas = ExtResource("1_gtmpm")
region = Rect2(640, 160, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_4q34a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvijc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sqap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk4b0")
}],
"loop": false,
"name": &"attack1",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xno3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o1m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xlkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sd0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iiah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3c1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tha5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo4o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yd1q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyecj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5o35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyyhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vpjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24w2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmyy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q0tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emwtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_133vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3601")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2si3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c0b7")
}],
"loop": false,
"name": &"death",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldolw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q34a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pxrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll3iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q62ga")
}],
"loop": false,
"name": &"hit",
"speed": 7.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f64y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcygy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w3dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43fpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qmt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdcht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eifw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77h6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdtoi")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ni2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsp08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5r2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj5pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr4j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dv02")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaw13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gckoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrwm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rknva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvh2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imw05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyxp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tmlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s25e4")
}],
"loop": false,
"name": &"windup1",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3pxrr"]
radius = 12.0
height = 31.8

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1f64y"]
radius = 13.0
height = 54.4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xno3g"]
size = Vector2(26, 64.8)

[node name="Basic Enemy" type="CharacterBody2D"]
scale = Vector2(2.5, 2.5)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_ldolw")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4q34a")
animation = &"idle"
autoplay = "idle"

[node name="Collisionbox" type="CollisionShape2D" parent="."]
position = Vector2(1, 8.5)
shape = SubResource("CapsuleShape2D_3pxrr")

[node name="Floor Raycast" type="RayCast2D" parent="."]
light_mask = 16
visibility_layer = 16
position = Vector2(14, 9)
target_position = Vector2(0, 38.6)

[node name="Wall Raycast" type="RayCast2D" parent="."]
light_mask = 0
visibility_layer = 16
position = Vector2(14, 9)
target_position = Vector2(13, 0)

[node name="Hurtbox" parent="." instance=ExtResource("3_0mme3")]
collision_mask = 2
damage = 25.0

[node name="Hurtbox Collision" type="CollisionShape2D" parent="Hurtbox"]
light_mask = 0
visibility_layer = 4
position = Vector2(27.4, 1.2)
shape = SubResource("CapsuleShape2D_1f64y")
disabled = true

[node name="Detectionbox" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 1023
collision_layer = 0
collision_mask = 2

[node name="Detectionbox Collision" type="CollisionShape2D" parent="Detectionbox"]
light_mask = 0
visibility_layer = 1023
position = Vector2(26.2, -2.8)
shape = SubResource("RectangleShape2D_xno3g")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_bn3wk")
maxHealth = 30.0
metadata/_custom_type_script = "uid://ccjfqwc5vm62o"

[connection signal="animation_finished" from="Sprite" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Detectionbox" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="Detectionbox" to="." method="_on_detect_player_body_exited"]
